Fix test compilation and execution errors.
git-svn-id: https://svn.apache.org/repos/asf/commons/proper/collections/branches/COLLECTIONS_3_2_X@1714107 13f79535-47bb-0310-9956-ffa450edef68